tests/transpiler/x/scala/user_type_literal.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:43:54 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    case class Person(name: String, age: Int)
    case class Book(title: String, author: Any)
    val book: Book = Book("Go", Person("Bob", 42))
    println(book.author.name)
  }
}
